--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   </head>
   <body>
     <h1>Berke Tabak</h1>
+
+    <!-- text part -->
+    <p>If you’ve made it this far, congrats.
+        If something’s broken or you have a question, feel free to email me.
+        Otherwise, there’s nothing else to see here. </p>
+
     <p>Email: <a href="mailto:berketabak1@gmail.com">berketabak1@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/berke-tabak-9834a1195/" target="_blank">linkedin.com/in/berke-tabak-9834a1195</a></p>
     <p>GitHub: <a href="https://github.com/berketabak" target="_blank">github.com/berketabak</a></p>
