--- a/index.html
+++ b/index.html
@@ -3,14 +3,30 @@
   <head>
     <meta charset="UTF-8">
     <title>Berke Tabak</title>
+    <style>
+      body {
+        background-color: black;
+        color: #00ff00;
+        font-family: monospace;
+        padding: 20px;
+      }
+      a {
+        color: #00ff00;
+        text-decoration: none;
+      }
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
   </head>
   <body>
     <h1>Berke Tabak</h1>
 
     <!-- text part -->
     <p>If you’ve made it this far, congrats.
-        If something’s broken or you have a question, feel free to email me.
-        Otherwise, there’s nothing else to see here. </p>
+       If something’s broken or you have a question, feel free to email me.
+       Otherwise, there’s nothing else to see here.
+    </p>
 
     <p>Email: <a href="mailto:berketabak1@gmail.com">berketabak1@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/berke-tabak-9834a1195/" target="_blank">linkedin.com/in/berke-tabak-9834a1195</a></p>
